<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="see_articles">See Articles</string>
    <string name="clear">Clear</string>
    <string name="see_details">See Details</string>
    <string name="articles_from_you">Articles From You</string>
    <string name="see_more">See More</string>

</resources>